cli/tests/snapshots/test_extract__extract_ingredient.snap
---
source: tests/test_extract.rs
info:
  program: c2patool
  args:
    - extract
    - ingredient
    - "--output"
    - /tmp/.tmpFSYYHt
    - /Users/nsalvemini/Documents/repos/c2patool/tests/fixtures/C.jpg
---
success: true
exit_code: 0
----- stdout -----
Sucessfully extracted ingredient to `[TEMP_FILE]
Sucessfully extracted manifest data to `[TEMP_FILE]

----- stderr -----
