cli/tests/snapshots/test_extract__extract_resources.snap
---
source: tests/test_extract.rs
info:
  program: c2patool
  args:
    - extract
    - resources
    - /Users/nicky/Documents/repos/c2patool/tests/fixtures/C.jpg
    - "--output"
    - /tmp/.tmpEtK3IP
    - "--force"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
