cli/tests/snapshots/test_extract__extract_resourecs.snap
---
source: tests/test_extract.rs
info:
  program: c2patool
  args:
    - extract
    - resources
    - "--output"
    - /tmp/.tmpLfJiOY
    - /Users/nsalvemini/Documents/repos/c2patool/tests/fixtures/C.jpg
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Output path already exists use `--force` to overwrite and clear children
